--- a/scripts/environments/local.env
+++ b/scripts/environments/local.env
@@ -3,10 +3,10 @@
 
 # Region to deploy into when running locally.
 # This is set by the Azure Pipeline for other environments.
-export LOCATION="westeurope" # Required
-export WORKSPACE="myworkspace" # Required
-export SUBSCRIPTION_ID="" # Required
-export TENANT_ID="" # Required
+export LOCATION="West US 2" # Required
+export WORKSPACE="AIworkspace" # Required
+export SUBSCRIPTION_ID="641b2935-5fbe-4cec-9865-9c0eb304cd53" # Required
+export TENANT_ID="11d0e217-264e-400a-8ba0-57dcc127d72d" # Required
 export IS_USGOV_DEPLOYMENT=false # Required
 
 # Use this setting to determine whether a user needs to be granted explicit access to the website via an
