--- a/scripts/environments/local.env.example
+++ b/scripts/environments/local.env.example
@@ -4,7 +4,7 @@
 # Region to deploy into when running locally.
 # This is set by the Azure Pipeline for other environments.
 export LOCATION="westeurope" # Required
-export WORKSPACE="myworkspace" # Required
+export WORKSPACE="AIworkspace" # Required
 export SUBSCRIPTION_ID="" # Required
 export TENANT_ID="" # Required
 
