--- a/scripts/environments/local.env.example
+++ b/scripts/environments/local.env.example
@@ -3,10 +3,10 @@
 
 # Region to deploy into when running locally.
 # This is set by the Azure Pipeline for other environments.
-export LOCATION="westeurope" # Required
+export LOCATION="West US 2" # Required
 export WORKSPACE="AIworkspace" # Required
-export SUBSCRIPTION_ID="" # Required
-export TENANT_ID="" # Required
+export SUBSCRIPTION_ID="641b2935-5fbe-4cec-9865-9c0eb304cd53" # Required
+export TENANT_ID="11d0e217-264e-400a-8ba0-57dcc127d72d" # Required
 
 # ----------------------------------------------------------
 # The following values determine the features that are enabled in the deployment.
@@ -20,13 +20,13 @@ export SECURE_MODE=false
 # Update to "true" if you want to deploy the solution with the ability to use the Work + Web Chat feature.
 # This feature will allow users to use web based search results to be a data source for grounding in the chat.
 # Web Chat feature IS NOT supported in AZURE_ENVIRONMENT="AzureUSGovernment"
-export ENABLE_WEB_CHAT=false
+export ENABLE_WEB_CHAT=true
 # If you are enabling the Web Chat feature, you can update the following values to "true" to enable safe search for the Bing data source.
 # Defaults to true if not defined.
 export ENABLE_BING_SAFE_SEARCH=true
 # Update to "true" if you want to deploy the solution with the ability to use the Generative Chat feature.
 # This feature will allow users to use native responses from the LLM without any data source for grounding in the chat.
-export ENABLE_UNGROUNDED_CHAT=false
+export ENABLE_UNGROUNDED_CHAT=true
 # Update to "true" if you want to deploy the solution with the ability to use the Math Assistant feature.
 # This feature will allow users to use the Math Assistant feature to solve math problems.
 export ENABLE_MATH_ASSISTANT=true
@@ -65,7 +65,7 @@ export REQUIRE_WEBSITE_SECURITY_MEMBERSHIP=false # Required
 # If using an existing deployment of Azure OpenAI, set the USE_EXISTING_AOAI to true and fill in the following values
 # If you are deploying a new instance of Azure OpenAI, set the USE_EXISTING_AOAI to false and the following values are not required
 # Using and existing instance of Azure OpenAI will NOT be allowed if deploying in Secure Mode
-export USE_EXISTING_AOAI=false # Required
+export USE_EXISTING_AOAI=true # Required
 export AZURE_OPENAI_RESOURCE_GROUP=""
 export AZURE_OPENAI_SERVICE_NAME=""
 export AZURE_OPENAI_SERVICE_KEY=""
